<resources>
    <string name="app_name">Komyuniti</string>
    <string name="tv_sign_up">SIGN UP</string>
    <string name="tv_or">or</string>
    <string name="et_name">Name</string>
    <string name="et_email_address">Email</string>
    <string name="et_password">Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_login">LOGIN</string>
    <string name="btn_google_login">Sign in with Google</string>
    <string name="tv_already_have_account"><u>Already have an account?</u></string>
    <string name="btn_login">Login</string>
    <string name="tv_forgot_password"><u>Forgot password?</u></string>
    <string name="change_password"><u>Update password</u></string>

    <string name="tv_events">Events</string>
    <string name="tv_history">History</string>
    <string name="ti_upcoming">Upcoming</string>
    <string name="ti_open">Open</string>
    <string name="flbtn_add">Add</string>
    <string name="sv_search">Search</string>
    <string name="tv_item_title_feed">action name</string>
    <string name="img_item_feed_describtion">Image in the feed fragment item list</string>
    <string name="tv_item_body_feed">action body</string>
    <string name="tv_minutes_passed">Elapsed time</string>
    <string name="tv_event_name">Event name</string>
    <string name="tv_event_item_number_of_people"> number of people in komyuniti</string>
    <string name="tv_event_item_date">Date</string>
    <string name="tv_done_event_back_btn">Back</string>
    <string name="tv_done_event_name">Event name</string>
    <string name="tv_location">Location</string>
    <string name="chip_groups">Groups</string>
    <string name="tv_notes">Notes</string>
    <string name="tv_notes_text">Your notes goes here</string>
    <string name="tv_checklist">Checklists</string>
    <string name="tv_expenses">Expenses</string>
    <string name="tv_checklist_item">Shoping list</string>

    <!-- New Event -->
    <string name="new_event">New Event</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="name_your_event">Name your event...</string>
    <string name="add_people">Add Komyunitis or People</string>
    <string name="add_component">Add Components</string>
    <string name="date">Date</string>
    <!-- Event -->
    <string name="event">Event</string>
    <string name="notes">Notes</string>
    <string name="checklist">Checklists</string>
    <string name="expenses">Expenses</string>
    <string name="count_entrys">Count entrys</string>
    <!-- Edit Event -->
    <string name="edit_event">Edit Event</string>


    <!--    alle Strings für Profile-->
    <string name="profile">Profile</string>
    <string name="profile_name">Placeholder Name</string>
    <string name="profile_description">Tell something about yourself</string>
    <string name="profile_friends">Friends</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="komyunitis">Komyunitis</string>
    <string name="komyuniti_image">Image</string>
    <string name="komyuniti_name">Komyuniti Name</string>
    <string name="komyuniti_members">X Members</string>
    <string name="komunitys_title">My Komyunitis</string>
    <string name="add_friend">Add Friend</string>
    <string name="create_komyuniti">Create Komyuniti</string>
    <string name="friend_image">Image of Friend</string>
    <string name="scanHint">Let other people scan this to add you as a friend</string>
    <!-- string for friends -->
    <string name="delete_account">Delete Account</string>

    <!-- scan result -->
    <string name="newFriendHeaderTitle">New friend</string>
    <string name="btnAddFriend">Add new friend</string>
    <string name="tvCommonKomyunitis">Common Komuntities</string>
    <string name="tv_price">Price</string>
    <string name="tv_price_purpose">Price purpose</string>

    <!-- Friend profile -->
    <string name="friendHeader">Friend</string>
    <string name="friendCreatedAt">Member since:</string>


</resources>