<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_password_login"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/et_password"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_email_login"
        app:layout_constraintStart_toStartOf="@+id/et_email_login"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <EditText
        android:id="@+id/et_email_login"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/et_email_address"
        android:drawableStart="@drawable/icon_email"
        android:ems="10"
        android:hint="@string/et_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_password_login"
        app:layout_constraintStart_toStartOf="@+id/et_password_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        app:layout_constraintVertical_bias="0.100000024"
        />

    <TextView
        android:id="@+id/tv_or_login"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_or"
        android:textSize="@dimen/or_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_sign_up_login"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_or_login" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_password_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />
</androidx.constraintlayout.widget.ConstraintLayout>
