<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tv_sign_up"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/et_name"
        android:background="@drawable/text_bg"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="5dp"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/et_email_address"
        android:background="@drawable/text_bg"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/et_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/grey4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/et_email_address"
        android:background="@drawable/text_bg"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/grey4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_email_address"
        app:layout_constraintStart_toStartOf="@+id/et_email_address"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tv_or_sign_up"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_or"
        android:textSize="@dimen/or_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_google_login"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_google__g__logo"
        android:text="@string/btn_google_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_or_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_already_have_account"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/tv_already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_google_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_google_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_google_login"
        app:layout_constraintVertical_bias="0.050000012" />

</androidx.constraintlayout.widget.ConstraintLayout>
