<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp">

            <TextView
                android:id="@+id/tv_back"
                style="@style/h3_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tv_title_new_event"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_new_event"
                style="@style/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/new_event" />

            <TextView
                android:id="@+id/tv_save"
                style="@style/h3_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/tv_title_new_event"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/save"
                android:gravity="right"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_name_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_your_event"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/grey3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@+id/toolbar"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_date_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/date"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_calendar"
        app:startIconTint="@color/color_primary"
        app:layout_constraintEnd_toEndOf="@+id/ti_name_event"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ti_name_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_name_event"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/grey3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ti_name_event"
            app:layout_constraintStart_toEndOf="@+id/ti_name_event"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/icon_location"
        app:startIconTint="@color/color_primary"
        app:layout_constraintEnd_toEndOf="@+id/ti_date_event"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ti_date_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_date_event"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/grey3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ti_date_event"
            app:layout_constraintStart_toEndOf="@+id/ti_date_event"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_people"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/icon_people"
        app:startIconTint="@color/color_primary"
        app:layout_constraintEnd_toEndOf="@+id/ti_location"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ti_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_location"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/grey3"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ti_name_event"
            app:layout_constraintStart_toEndOf="@+id/ti_name_event"
            />

<!--        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uni Leute" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/ti_people"
        >
        <TextView
            android:id="@+id/tv_location"
            style="@style/h3"
            android:text="@string/add_component"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:drawableEndCompat="@drawable/ic_add"
            app:drawableTint="@color/color_primary"
            android:drawablePadding="16dp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/notes"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/checklist"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/expenses" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>