<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_item_feed"
        android:layout_width="90dp"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_item_feed_describtion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tv_item_title_feed"
        style="@style/itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_item_title_feed"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_feed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_item_feed"
        app:layout_constraintTop_toTopOf="@+id/img_item_feed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_item_body_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_item_body_feed"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_item_feed"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title_feed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_minutes_passed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_minutes_passed"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_title_feed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_item_title_feed"
        app:layout_constraintTop_toTopOf="@+id/tv_item_title_feed" />

</androidx.constraintlayout.widget.ConstraintLayout>