<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/color_primary"
        app:layout_constraintTop_toTopOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp">

            <TextView
                android:id="@+id/tv_back"
                style="@style/h3_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/profile_header_title"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_header_title"
                style="@style/TitleStyle_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/save_settings"
                style="@style/h3_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/profile_header_title"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/save"
                android:gravity="right"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintVertical_bias="0.17000002" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/icon_user"
            android:drawableTint="@color/color_primary"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_description"
        android:hint="@string/profile_description"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" >

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/icon_description"
            android:drawableTint="@color/color_primary"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_address"
        android:hint="@string/et_email_address"
        android:autofillHints="@string/et_email_address"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_description"
        app:layout_constraintStart_toStartOf="@+id/et_description"
        app:layout_constraintTop_toBottomOf="@+id/et_description" >

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/icon_email"
            android:drawableTint="@color/color_primary"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_new_password"
        android:hint="@string/new_password"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email_address"
        app:layout_constraintStart_toStartOf="@+id/et_email_address"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address" >

    <com.google.android.material.textfield.TextInputEditText
        android:drawableStart="@drawable/icon_password"
        android:drawableTint="@color/color_primary"
        android:drawablePadding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/et_new_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password" />

    <Button
        android:id="@+id/settings_logout_btn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/et_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password"
        />

    <Button
        android:id="@+id/settings_delete_account"
        style="@style/ButtonStyleError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/et_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fltbt_profile_pic_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/icon_edit"
        app:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
